# Gptrader

./: .gitignore  .pre-commit-config.yaml  .txt
.github/workflows/: ci.yml
gp-trader/: .ci-ping  .coverage  .gitignore  Makefile  README.md  pyproject.toml  repo_diagnose.txt
gp-trader/.github/workflows/: ci.yml
gp-trader/artifacts/run-demo/: pnl.csv  summary.json
gp-trader/data/indices/news/: meta.jsonl  vecs.jsonl
gp-trader/data/journal/news.v1/: partition-0.ndjson
gp-trader/data/journal/quotes.v1/: partition-0.ndjson
gp-trader/data/samples/: quotes-part0.parquet
gp-trader/gptrader.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
gp-trader/src/gptrader/: _schemas.py  bus.py  cli.py  config.py  storage.py  vectorstore.py
gp-trader/src/gptrader.egg-info/: SOURCES.txt  requires.txt  top_level.txt
gp-trader/src/gptrader/adapters/: __init__.py  eventbus.py  eventhubs.py  exec.py  factory.py  index.py
gp-trader/tests/: test_adapters_factory.py  test_bus_and_e2e.py  test_cli_diag.py  test_sanity.py  test_schemas_and_cli.py  test_storage_and_index.py
